# py-MARVEL

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
benchmark/: README.md
benchmark/scripts/: build_external_benchmark.py  plot_benchmark_summary_figure.py  plot_external_benchmark_report.py  profile_droplet_anndata_steps.py  run_external_benchmark_archive.py  run_external_droplet_r.R  run_external_plate_r.R  run_python_anndata_benchmark.py
docs/: phase3_plot_pca_iso_mismatch_log.md
examples/: Droplet_data.ipynb  plate_data.ipynb
marvel_py/: __init__.py  adata.py  adhoc.py  alignment.py  annotation.py  de.py  detect.py  io.py  iso.py  matrix.py  misc.py  modality.py  models.py  plot.py  psi.py  qc.py  splicing.py  stats.py  utils.py
scripts/: export_phase3_plate_reference.R
tests/: _phase1_r_reference.py  _phase3_plate_reference.py  test_anndata_api.py  test_phase3_audit.py  test_phase3_plate_r_compare.py  test_version.py
tests/r_reference/phase3_plate/: README.md  iso_switch.tsv  iso_switch_plot_expr.tsv  manifest.json  modality_change.tsv  plot_de_gene_global.tsv  plot_values_gene.tsv  prop_modality.tsv  run_pca_gene_coords.tsv  run_pca_gene_explained.tsv  run_pca_splicing_coords.tsv  run_pca_splicing_explained.tsv
tests/r_reference/plate_phase1/: README.md  alignment_exp_subset_s1_s2.tsv  alignment_splice_junction_s1_s2.tsv  alignment_splice_pheno.tsv  assign_modality_core.tsv  compare_values_gene.tsv  compute_psi_posterior_se.tsv  compute_psi_se.tsv  count_events_min1.tsv  manifest.json  object_splice_feature_se.tsv
tests/r_reference/plate_phase1/inputs/: exp.tsv  gene_feature.tsv  splice_junction.tsv  splice_pheno.tsv
