[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marvel-py"
version = "0.1.0"
description = "Pure-Python MARVEL workflows for plate- and droplet-based single-cell splicing analysis."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["single-cell", "splicing", "RNA-seq", "MARVEL", "plate", "10x"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "statsmodels",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["marvel_py*"]
exclude = ["tests*", "python*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::FutureWarning",
]
